# brprev-commerce

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker_start.sh  pyproject.toml  settings.toml  setup.cfg
brprev_commerce/: app.py  database.py  initialize_db.py  models.py  schemas.py  views.py
brprev_commerce/tests/: conftest.py  factories.py  test_customer.py  test_purchase.py
kubernetes/: brprev_commerce-configmap.yml  brprev_commerce_api-deployment.yml  ingress.yml  postgres-deployment.yml
