[tool.poetry]
name = "brprev_commerce"
version = "0.0.1"
description = "Admission test project"
authors = ["Leonam <leonam.silva.cc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.1"
marshmallow = "3.0.0"
gunicorn = "19.9.0"
Flask-SQLAlchemy = "2.4.0"
dynaconf = "2.2.2"
marshmallow_jsonapi = "^0.23.2"
sqlalchemy = "1.3.18"
Flask-JWT = "^0.3.2"
pytest-mock = "^3.3.1"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
ipython = "^7.8.0"
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
pylint = "^2.4.3"
flake8 = "^3.7.8"
freezegun = "^0.3.12"
factory-boy = "^2.12.0"
pytest-env = "^0.6.2"
isort = "^5.4.2"
pytest-mock = "^3.3.1"
pytest-randomly = "^3.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
